--- a/DocGen.csproj
+++ b/DocGen.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.31.0" />
+    <PackageReference Include="OpenAI" Version="2.5.0" />
   </ItemGroup>
 
 </Project>
